# test_pulumi_poetry

./: Pulumi.yml  pyproject.toml
