[tool.poetry]
name = "test_pulumi_poetry"
version = "0.1.0"
description = ""
authors = ["Kyle Pitzen <kyle.pitzen@gmail.com>"]
license = "MIT"
packages = [{ include = "test_pulumi_poetry", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.35.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
